--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/home/swati/Downloads/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="/home/swati/Downloads/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="/home/swati/Downloads/poi-ooxml-schemas-3.15.0.jar"/>
+	<classpathentry kind="lib" path="/home/swati/Downloads/poi-3.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
